--- a/index1.html
+++ b/index1.html
@@ -7,8 +7,17 @@
 	<script type="text/javascript" src="less.min.js"></script>
 </head>
 <body>
-	<div id="box">
-		这个世界我真不懂
+	<div class="clear">
+		<div id="box">这个世界我真不懂</div>
+		<div class="section-1">
+			<h2>我是个标题</h2>
+			<hr>
+				<p>我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容</p>
+			<p>我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容</p>
+			<p>我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容我是一些内容</p>
+		</div>
+		<div class="section-2"></div>
 	</div>
+	<div class="sanjiao"></div>
 </body>
 </html>
